fix navbar spacing issues

--- a/frontend/sass/norent/_navbar-overrides.scss
+++ b/frontend/sass/norent/_navbar-overrides.scss
@@ -5,9 +5,17 @@ nav.navbar {
     // override navbar position to not be sticky:
     position: absolute;
   }
-
-  .navbar-brand {
-    padding: 0 1.5rem;
+  // Increase container width to accomodate admin/developer links on desktop
+  .container {
+    max-width: 1200px;
+    @include tablet {
+      padding: 0 1rem;
+    }
+    @include mobile {
+      .navbar-brand {
+        padding: 0 1rem;
+      }
+    }
   }
 
   .navbar-link,
